# Garbage

./: README.md  alembic.ini  docker-compose-local.yaml  local.env  main.py  pyproject.toml  requirements.txt  settings.py
car/: car.py  fibonacci.py  test.py  types.py
garbage/: app.py  dependencies.py  errors.py  settings.py
garbage/api/v1/: error_handler.py  handlers.py  routes.py  types.py
garbage/repositories/: repository.py
garbage/repositories/v1/: tables.py
garbage/services/: create_user.py  delete_user.py  edit_user.py  get_user.py
garbage_app/api/v1/: routes.py  types.py
garbage_app/repositories/: repository.py
garbage_app/repositories/v1/: tables.py
garbage_app/services/: create_user.py  delete_user.py  main.py
migrations/: env.py
migrations/versions/: 0a673209e20c_.py  1319c11892b6_.py  568df317f17b_create_table_users.py
tests/: conftest.py  fixtures.py  test_app.py
